# traffic-counting

./: CMakeLists.txt  ExtendedPlayer.pro  ExtendedPlayer.pro.user.4d53ae5  README  config.cpp  config.h  config.ui  count.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h
config/: FrameDifferenceBGS.xml  GMG.xml  VehicleCouting.xml
config/.svn/: all-wcprops  entries
dataset/: a.flv  d.flv
dataset/.svn/: all-wcprops  entries
package_analysis/: VehicleCouting.cpp  VehicleCouting.h
package_bgs/: FrameDifferenceBGS.h  IBGS.h  MixtureOfGaussianV1BGS.h  StaticFrameDifferenceBGS.h  WeightedMovingMeanBGS.h  WeightedMovingVarianceBGS.h
package_bgs/.svn/: all-wcprops  entries
package_bgs/dp/.svn/: all-wcprops  entries
package_bgs/jmo/: BGS.h  BackgroundSubtractionAPI.h  BlobResult.h  LocalBinaryPattern.h  MultiLayerBGS.h  OpenCvDataConversion.h  blob.h
package_bgs/jmo/.svn/: all-wcprops  entries
package_bgs/lb/.svn/: all-wcprops  entries
package_bgs/pt/: PBAS.h  PixelBasedAdaptiveSegmenter.h
package_bgs/pt/.svn/: all-wcprops  entries
package_bgs/tb/.svn/: all-wcprops  entries
package_tracking/: BlobTracking.cpp  BlobTracking.h
package_tracking/cvblob/10.3/: cvblob.cpp  cvblob.h  cvcolor.cpp  cvcontour.cpp  cvlabel.cpp  cvtrack.cpp
