cmake_minimum_required(VERSION 2.8.4)
project(count)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fpermissive")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
find_package( OpenCV REQUIRED)
file(GLOB analysis_src "./package_analysis/*.h" "./package_analysis/*.cpp")
file(GLOB bgs_src "./package_bgs/*.h" "./package_bgs/*.cpp")
file(GLOB bgs_pt_src "./package_bgs/pt/*.h" "./package_bgs/pt/*.cpp")
file(GLOB bgs_jmo_src "./package_bgs/jmo/*.h" "./package_bgs/jmo/*.cpp")
file(GLOB tracking_src "./package_tracking/*.h" "./package_tracking/*.cpp")
file(GLOB tracking_cvblob_src "./package_tracking/cvblob/*.h" "./package_tracking/cvblob/*.cpp")
set(SOURCE_FILES count.cpp ${analysis_src} ${bgs_src} ${bgs_jmo_src} ${bgs_pt_src} ${tracking_src} ${tracking_cvblob_src} )
add_executable(count ${SOURCE_FILES})
target_link_libraries(count ${OpenCV_LIBS})